--- a/first_chart.html
+++ b/first_chart.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="styles/main.css">
 
   <!-- add the Highcharts script elements here -->
+  <script src="https://code.highcharts.com/highcharts.js">
+  </script>
+  <script src="https://code.highcharts.com/themes/avocado.js"></script>
 
 </head>
 <body>
@@ -16,7 +19,34 @@
   <h1>My first chart with Highcharts</h1>
 
   <!-- add the div and the chart code BELOW this comment -->
+  <div id="container" style="width:100%; height:400px;">
+    var chart1; // globally available</div>
 
+  <script>
+      Highcharts.chart('container', {
+                chart: {
+                    type: 'bar'
+                },
+                title: {
+                    text: 'Fruit Consumption'
+                },
+                xAxis: {
+                    categories: ['Lemons', 'Apples', 'Bananas', 'Oranges']
+                },
+                yAxis: {
+                    title: {
+                        text: 'Fruit eaten'
+                    }
+                },
+                series: [{
+                    name: 'Jane',
+                    data: [6, 1, 0, 4]
+                }, {
+                    name: 'John',
+                    data: [6, 5, 7, 3]
+                }]
+        });
+  </script>
   <!-- the 'container' DIV must be EMPTY -->
 
 
