--- a/first_chart.html
+++ b/first_chart.html
@@ -39,10 +39,10 @@
                     }
                 },
                 series: [{
-                    name: 'Jane',
+                    name: 'Josh',
                     data: [6, 1, 0, 4]
                 }, {
-                    name: 'John',
+                    name: 'Drew',
                     data: [6, 5, 7, 3]
                 }]
         });
